Initial import of code from local working copy of tmk_keyboard

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,19 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+.dep
+*.o
+*.eep
+*.elf
+*.hex
+*.lss
+*.lst
+*.map
+*.sym
+tags
+*~
+build/
+*.bak
+.DS_Store
+*.swp
